--- a/index.html
+++ b/index.html
@@ -288,17 +288,16 @@
 
       const zipDom = document.querySelector("#zip");
       const dlDom = document.querySelector("#download");
-      const autoPermOpenDom = document.querySelector("#auto-perm-open");
       const autoPermClearDom = document.querySelector("#auto-perm-clear");
       const autoPermPresetDom = document.querySelector("#auto-perm-preset");
       const autoPermDom = document.querySelector("#auto-perm");
       const noCreateFoldersDom = document.querySelector("#no-create-folders");
       const autoPermNoResetDom = document.querySelector("#auto-perm-no-reset");
       const autoPermNoApplyDom = document.querySelector("#auto-perm-no-apply");
-      const colorMeaningOpenDom = document.querySelector("#color-meaning-open");
-      const colorMeaningExampleDom = document.querySelector("#color-meaning-example");
 
       function setupExpandable(openDom, targetDom) {
+        if (typeof openDom === "string") openDom = document.querySelector(openDom);
+        if (typeof targetDom === "string") targetDom = document.querySelector(targetDom);
         function updateExpandableOpenIcon() {
           const iconDom = openDom.querySelector(".icon");
           if (targetDom.classList.contains("hidden"))
@@ -314,8 +313,8 @@
         });
       }
 
-      setupExpandable(autoPermOpenDom, autoPermDom);
-      setupExpandable(colorMeaningOpenDom, colorMeaningExampleDom);
+      setupExpandable("#auto-perm-open", autoPermDom);
+      setupExpandable("#color-meaning-open", "#color-meaning-example");
 
       const root = new TreeNode("Select a ZIP file or drag one over...", { forceParent: true, icon: "🗐", expanded: false });
       const view = new TreeView(root, "#container");
